changed comments
