# docs/swagger.yaml
@@ -119,17 +119,6 @@ definitions:
       username:
         type: string
     type: object
-  models.View:
-    properties:
-      announcement_id:
-        type: integer
-      created_at:
-        type: string
-      id:
-        type: integer
-      user_id:
-        type: integer
-    type: object
 host: localhost:8181
 info:
   contact: {}
@@ -347,43 +336,6 @@ paths:
       summary: Create a review for an announcement
       tags:
       - review
-  /announcements/{id}/views/report:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves the total number of views for a specific announcement
-      parameters:
-      - description: Announcement ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: List of views
-          schema:
-            items:
-              $ref: '#/definitions/models.View'
-            type: array
-        "400":
-          description: 'error: invalid announcement ID'
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: 'error: failed to get report'
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Get views report for an announcement
-      tags:
-      - view annoncements
   /announcements/{price}:
     get:
       description: get announcements by price
@@ -456,6 +408,47 @@ paths:
       summary: Get Announcements By Number of Rooms
       tags:
       - announcements
+  /announcements/review/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a review to a specific announcement
+      parameters:
+      - description: Announcement ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Review Body
+        in: body
+        name: review
+        required: true
+        schema:
+          $ref: '#/definitions/models.Review'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 'message: review created successfully'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: 'error: invalid request'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 'error: failed to create review'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a review for an announcement
+      tags:
+      - review
   /announcements/reviews/{id}:
     get:
       consumes:
